<resources>
    <string name="app_name">Characters</string>
    <string name="origin">Origin</string>
    <string name="location">Location</string>
    <string name="status">Status</string>
    <string name="gender">Gender</string>
    <string name="species">Species</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="locations">Locations</string>
    <string name="error_try_again">Error! Try Again</string>
    <string name="name">Name</string>
    <string name="type">Type</string>
    <string name="dimension">Dimension</string>
    <string name="characters">Characters</string>
</resources>